--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Hello!</h1>
-      <p>This is Adriana Pac's AVT 420 homepage.</p>
+      <p>This is Adriana Blindu's AVT 420 homepage.</p>
     <h2>Assignments</h2>
     <h2>Projects</h2>
     <h2>Links</h2>
