--- a/hello.html
+++ b/hello.html
@@ -8,6 +8,7 @@
     <h1>Hello!</h1>
       <p>This is Adriana Blindu's AVT 420 homepage.</p>
     <h2>Assignments</h2>
+ <img src="animals.jpg" alt="animals in different languages" width="500" height="600">
     <a href=" https://adrianapacgmu.github.io/avt420advancedwebdesign/animals.html">THE SOUND OF ANIMALS- in different languages</a>
     
     <h2>Projects</h2>
