--- a/hello.html
+++ b/hello.html
@@ -9,8 +9,9 @@
       <p>This is Adriana Blindu's AVT 420 homepage.</p>
     <h2>Assignments</h2>
     <h3> Assignment1 </h3> 
-    <img src="animals.jpg" alt="animals in different languages" width="500" height="600">
-    <a href=" https://adrianapacgmu.github.io/avt420advancedwebdesign/animals.html">THE SOUND OF ANIMALS- in different languages</a>
+    <p>Website design in Figma <a href="animals.pdf">Simple website design</a>.</p>
+    
+    <p><a href=" https://adrianapacgmu.github.io/avt420advancedwebdesign/animals.html">THE SOUND OF ANIMALS- in different languages</a></p>
     
     <h2>Projects</h2>
     <h2>Links</h2>
