--- a/hello.html
+++ b/hello.html
@@ -10,6 +10,7 @@
     <h2>Assignments</h2>
     <h3> Assignment1 </h3> 
     <p>Website design in Figma <a href="animals.pdf">Simple website design</a>.</p>
+    <img src="sketch.jpg" alt="sketch" width="100" height="100">
     
     <p><a href=" https://adrianapacgmu.github.io/avt420advancedwebdesign/animals.html">THE SOUND OF ANIMALS- in different languages</a></p>
     
