--- a/hello.html
+++ b/hello.html
@@ -18,7 +18,7 @@
     <p>Easy Checks for Accessibility
   <a href="Blindu_Assignment2.pdf">Accessibility</a>.</p>
     
-     <h3> Assignmen3 </h3> 
+     <h3> Assignment3 </h3> 
      <p><a href=" https://codepen.io/adrianab/pen/GRvdQve">Form</a></p>
    
     
